<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f498ad"
    tools:context=".StateFragment">

    <LinearLayout
        android:id="@+id/llStateAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1"
        android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/tvStateAmount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/state_amount"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight=".3"/>

        <EditText
            android:id="@+id/etStateEnterAmount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/state_enter_amount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:layout_weight=".7"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/stateSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
         android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/llStateAmount" />

    <LinearLayout
        android:id="@+id/llStateTaxPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/stateSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvTaxPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/state_tax_percent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight=".3"/>

        <TextView
            android:id="@+id/tvStateTaxPercentage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/state_tax_percentage"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight=".7"/>

    </LinearLayout>

<LinearLayout
    android:id="@+id/llStateTotalAmount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="70dp"
    app:layout_constraintTop_toBottomOf="@id/llStateTaxPercent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:weightSum="1">


    <TextView
        android:id="@+id/tvStateTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/state_total"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_weight=".3"/>

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/state_total_amount"
        android:textSize="20sp"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:layout_weight=".7"/>

</LinearLayout>

    <Button
        android:id="@+id/stateCalculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStateTotalAmount" />


</androidx.constraintlayout.widget.ConstraintLayout>