<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ffce"
    tools:context=".LocalFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/llAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="70dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvLocalAmount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight=".3"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/etLocalEnterAmount"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:hint="@string/enter_amount"
                    android:inputType="number"
                    android:textSize="18sp"
                    android:textColorHint="@color/black"
                    android:gravity="center"
                    android:layout_weight=".7"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llAmount"
                android:layout_marginTop="70dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvZipCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/zip_code"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_weight=".3"
                    />

                <EditText
                    android:id="@+id/etInputLocalZipCode"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight=".7"
                    android:ems="10"
                    android:hint="@string/input_zip_code"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="@color/black"
                    android:gravity="center"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llZipCodeTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llZipCode"
                android:layout_marginTop="70dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvTaxPercentage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/tax_percentage"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_weight=".3"/>

                <TextView
                    android:id="@+id/tvLocalTaxPercentage"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:hint="@string/local_zip_code_tax"
                    android:textColorHint="@color/black"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_weight=".7"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="70dp"
                app:layout_constraintTop_toBottomOf="@id/llZipCodeTax">

                <TextView
                    android:id="@+id/tvLocalTotal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:gravity="center"
                    android:text="@string/local_total"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/tvLocalFinalTotal"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight=".7"
                    android:text="@string/final_total"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonLocalCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_marginBottom="16dp"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>